de1.5ify
git-svn-id: http://svn.vuze.com/public/client@12344 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2